MAPR-HBASE-179: Warnings in the hbase shell